changes made in buttons

--- a/signup.html
+++ b/signup.html
@@ -20,8 +20,8 @@
                     <input class="input-field" type="text" name="email" placeholder="Email" required>
                     <input class="input-field" type="password" name="password" placeholder="Password" required>
                 
-                <div style="display: flex;width:100%">
-                    <button type="button" style="width: 150px; display:block;float:right;margin-left:auto; text-align: center;">Sign Up</button>
+                <div style="display: flex;width:100%;">
+                    <button style="color: white;background-color: rgb(71, 94, 134); margin:auto" type="submit" formaction="login.html">Sign Up</button>
                 </div>
                 <p class="message" style="text-align: center;">By signing up, you agree to our 
                     <a href="" style="color: rgb(71, 94, 134);">Terms of Service</a> and
